--- a/02 Yaml/.circleci/config.yml
+++ b/02 Yaml/.circleci/config.yml
@@ -4,13 +4,12 @@ jobs:
     docker: circleci/node
     steps:
       - checkout
-      - run
-        name: "'run' statements can actually contain a 'name' and 'command' argument as well"
-        command: | 
-          echo "You can even have multiline commands."
+      - run:
+          name: "'run' statements can actually contain a 'name' and 'command' argument as well"
+          command: | 
+            echo "You can even have multiline commands."
       - restore_cache:
-          keys:
-          - v1-dependencies-
+          keys: v1-dependencies-
       - run: mkdir ~/cache/
       - run: echo "testfile" > ~/cache/log.txt
       - save_cache:
