--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 version: 2.1
 jobs:
   build:
-    docker: circleci/node
+    docker: 
+      - image: circleci/node
     steps:
       - checkout
       - run:
